BUG#14940 "MySQL choose wrong index", v.2 - Make the range-et-al optimizer produce E(#table records after table                                            condition is applied), - Make the join optimizer use this value, - Add "filtered" column to EXPLAIN EXTENDED to show   fraction of records left after table condition is applied - Adjust test results, add comments